# mpip

./: .gitignore  LICENSE  README.md  pyproject.toml
mpip/: __init__.py  __main__.py  cli.py  installer.py  markers.py  pypi.py  requirements.py  resolver.py  tags.py  version.py
tests/: test_core.py
