[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mpip"
version = "0.1.0"
description = "A from-scratch, dependency-free Python package installer (a pip-like tool that never calls pip)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Omar Rafik" }]
keywords = ["pip", "packaging", "installer", "pypi", "wheel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Installation/Setup",
    "Topic :: Software Development :: Build Tools",
]
# Zero runtime dependencies: mpip uses only the Python standard library.
dependencies = []

[project.urls]
Homepage = "https://github.com/pyronix-dev/mpip"
Repository = "https://github.com/pyronix-dev/mpip"
Issues = "https://github.com/pyronix-dev/mpip/issues"

[project.scripts]
mpip = "mpip.cli:main"

[tool.setuptools]
packages = ["mpip"]
